--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
     <!-- TODO: Include Font Awesome file here -->
     <!-- TODO: Include Google Fonts file here -->
+    <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
 </head>
 
 <body>
     <!-- TODO: Include all your code for the header and home page here -->
+      <div class="header">
+        <h1>Header</h1>
+        <p>My supercool header</p>
+      </div>
+   
 </body>
 
 </html>
