--- a/index.html
+++ b/index.html
@@ -5,16 +5,67 @@
     <!-- TODO: Include Font Awesome file here -->
     <!-- TODO: Include Google Fonts file here -->
     <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link href="css\index.css" rel='stylesheet' type='text/css'>  
+    <link href="css\common.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <!-- TODO: Include all your code for the header and home page here -->
-      <div class="header">
-        <h1>Header</h1>
-        <p>My supercool header</p>
+    <div class="header">
+        <button id ="SignInButton" >Sign In</button>
+        <button id ="SignUpButton" >Sign Up</button>
+        <a id="pageTitle" class="logo">ScriBBler</a>
+        <p class="sublogo">Explore, Imagine, Create</p>
+    </div> 
+
+    <div id="myModal" class="modal">                  
+        <div class="modal-content">
+          <span class="close">
+            &times;
+          </span>
+          <p>
+            <h1>Get Started</h1>
+            <hr class = "hr-Shade">
+            <form class = "form-style">
+            <label>Name</label><br>
+            <input type="text" placeholder="Enter your name" required> <br>           
+            <label>Username</label><br>
+            <input type="text" placeholder="Enter your username" required><br>                
+            <label>Password </label><br>
+            <input type="password" placeholder="Enter your password" required><br>                  
+            <label>Confirm Password</label><br>
+            <input type="password" placeholder="Re-enter your password" required><br>                 
+            <button class = "Sign-Up-Button">Sign Up</button>
+            </form>       
+          </p>
+        </div>
+      </div>
+                
+      <div id="myModal2" class="modal">                  
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>
+            <h1>Welcome Back !</h1>
+            <hr class = "hr-Shade">
+            <form class = "form-style">   
+              <label>Username</label> <br>
+              <input type="text" placeholder="Enter your username" required> <br>
+              <label>Password</label> <br>
+              <input type="password" placeholder="Enter your password" required> <br>
+              <button class = "Sign-Up-Button">
+                Sign In
+              </button><br>
+              <div style="text-align: center;">
+                    <b>Not a member ?</b> <a id="shift" onclick="GoToSignUp()">Sign Up</a>
+            </div>
+              
+            </form>       
+          </p>
+        </div>
       </div>
    
+      <script src = "js\common.js"></script>
 </body>
 
 </html>
