--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div> 
     <div id = "postButtons">
             <p align = "center">
-                <a href = "html/bloglist.html">
+                <a href = "postlist.html">
                   <button class= "PostButton">
                     All Posts 
                   </button>
